infra/openshift/generalized/api/base/01-service.yml
apiVersion: v1
kind: Service
metadata:
  name: trivy-rest-client
spec:
  ports:
    - name: 8084-tcp
      port: 8084
      protocol: TCP
      targetPort: 8084
  selector:
    app: trivy-rest-client
  sessionAffinity: None
  type: ClusterIP
---
kind: Service
apiVersion: v1
metadata:
  name: trivy-rest-client-actuator
  labels:
    type: actuator
spec:
  ports:
    - name: 8081-tcp
      protocol: TCP
      port: 8081
      targetPort: 8081
  selector:
    app: trivy-rest-client
