infra/openshift/generalized/api/base/03-route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: trivy-rest-client
  annotations:
    openshift.io/host.generated: 'true'
spec:
  subdomain: ''
  to:
    kind: Service
    name: trivy-rest-client
    weight: 100
  port:
    targetPort: 8084-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
